--- a/www/templates/MyPage.html
+++ b/www/templates/MyPage.html
@@ -1,15 +1,15 @@
-<div class="bookHisDev ">
-  <div class="row historyTable">
-    <div class="col-md-6">
+<div class="container bookHisDev ">
+  <div class="row-md-auto historyTable">
+    <div class="col-md-auto">
       <h2>Aktuella Bokningar</h2>
       ${this.currentBookings}
 
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-6">
+  <div class="row-md-auto historyTable">
+    <div class="col-md-auto">
       <h2>Bokningshistorik</h2>
       ${this.bookingHistory}
     </div>
   </div>
-</div>
+</div> 
