--- a/sass/bookings.scss
+++ b/sass/bookings.scss
@@ -1,56 +1,36 @@
 .movie-color {
-  color: #761818 !important;
+    color: #761818 !important;
 }
 
 .booking-image {
-  object-fit: cover;
-  width: 277px;
-  margin-left: -23px;
-  -webkit-box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
-  -moz-box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
-  box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
+    object-fit: cover;
+    width: 277px;
+    margin-left: -23px;
+    -webkit-box-shadow: 0px 0px 96px -20px rgba(242, 242, 242, 0.62);
+    -moz-box-shadow: 0px 0px 96px -20px rgba(242, 242, 242, 0.62);
+    box-shadow: 0px 0px 96px -20px rgba(242, 242, 242, 0.62);
 }
 
 .movie-align {
-  text-align: center;
+    text-align: center;
 }
 
 .movie-margin {
-  margin-left: 15px;
+    margin-left: 15px;
 }
 
 .movie-inline {
-  display: inline-block;
+    display: inline-block;
 }
 
 .movie-color {
-  color: #f2f2f2 !important
+    color: #f2f2f2 !important
 }
 
-.movie-align > div {
-  margin-top: 100px;
+.movie-align>div {
+    margin-top: 100px;
 }
 
 .showtime-info {
-  margin-bottom: -44px;
-}
-
-.thegreat {
-  margin-top: 148px;
-}
-
-.birdbox {
-  margin-top: 187px;
-}
-
-.astarisborn {
-  margin-top: 173px;
-}
-
-.mebeforeyou {
-  margin-top: 184px;
-}
-
-.armageddon {
-  margin-top: 174px;
+    margin-bottom: -44px;
 }
