--- a/www/templates/Movie.html
+++ b/www/templates/Movie.html
@@ -3,10 +3,10 @@
         <h3 class="movie-title" data-id="${this._id}"><a class="movie-color" href="/film/${this._id}">${this.title}</a>
         </h3>
     </div>
-    <div class="col-sm-12 col-md-4">
+    <div class="col-sm-12 col-lg-4">
         <img class="booking-image thegreat" src="${this.image[1]}">
     </div>
-    <div class="col-sm-12 col-md-8 align-top">
+    <div class="col-sm-12 col-lg-8 align-top">
         <p>
             ${this.showtimes}
         </p>
